--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
+    "trailingComma": "all",
+    "tabWidth": 2,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 140,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "useTabs": false,
+    "arrowParens": "avoid",
+    "jsxSingleQuote": true
 }
