--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "@types/node": "^16.18.36",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
+        "chakra-dayzed-datepicker": "^0.2.9",
+        "date-fns": "^2.30.0",
+        "dayzed": "^3.2.3",
         "formik": "^2.4.2",
         "framer-motion": "^10.12.16",
         "react": "^18.2.0",
