[MOZ-1] Trying to fix github-pages homepage link for app to run on env.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/danmic94/mozio-distance-app",
+    "homepage": "https://danmic94.github.io/mozio-distance-app",
     "name": "mozio-distance-app",
     "version": "0.2.0",
     "private": false,
